[gd_scene load_steps=14 format=3 uid="uid://biw7a1ylgrqcu"]

[ext_resource type="Script" path="res://Misc Scripts/BasicTower.gd" id="1_dnbjb"]
[ext_resource type="PackedScene" uid="uid://coqnc4e8k7cxg" path="res://Towers/Default Minki/BasicDart.tscn" id="2_6uhc4"]
[ext_resource type="Texture2D" uid="uid://cr374bja6kq8s" path="res://Assets/circle.png" id="3_tpvv5"]
[ext_resource type="Shader" path="res://DefaultDude.gdshader" id="4_jj1j6"]
[ext_resource type="Texture2D" uid="uid://b5xso582ggq0r" path="res://Assets/person.png" id="5_xdy8v"]
[ext_resource type="Texture2D" uid="uid://ccrgq6sennjcm" path="res://Assets/checkerboard.png" id="6_tf6vr"]
[ext_resource type="StyleBox" uid="uid://ruchrnlx762e" path="res://InvalidPlacement.tres" id="7_4er6j"]
[ext_resource type="PackedScene" uid="uid://do4yo845lj8nv" path="res://Towers/TowerOptions.tscn" id="8_w1pmt"]
[ext_resource type="PackedScene" uid="uid://ceh3il5apv881" path="res://Towers/TowerBackpack.tscn" id="9_g1x86"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tr8sk"]
size = Vector2(109, 110)

[sub_resource type="CircleShape2D" id="CircleShape2D_cil23"]
radius = 250.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lb0lg"]
shader = ExtResource("4_jj1j6")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 6.0
shader_parameter/pattern = 1
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0lv8g"]
texture = ExtResource("6_tf6vr")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(1, 0.188235, 0.823529, 1)

[node name="TempMinkiTower" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_dnbjb")
Name = "Default Minki"
projectile = ExtResource("2_6uhc4")

[node name="TowerShape" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_tr8sk")

[node name="BulletOrigin" type="Marker2D" parent="."]
position = Vector2(44, 0)

[node name="BulletRange" type="Area2D" parent="."]

[node name="BulletRangeShape" type="CollisionShape2D" parent="BulletRange"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_cil23")

[node name="BulletRangeVisual" type="Sprite2D" parent="."]
modulate = Color(0.0588235, 1, 1, 0.368627)
scale = Vector2(1.43, 1.43)
texture = ExtResource("3_tpvv5")

[node name="OutlineShader" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_lb0lg")
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_xdy8v")

[node name="ModulateTexture" type="Sprite2D" parent="."]
clip_children = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_xdy8v")

[node name="Panel" type="Panel" parent="ModulateTexture"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = -128.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_0lv8g")

[node name="BulletCooldown" type="Timer" parent="."]
one_shot = true

[node name="Area" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.694118)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("7_4er6j")

[node name="TowerMenu" parent="." node_paths=PackedStringArray("tower") instance=ExtResource("8_w1pmt")]
offset_top = -120.0
offset_bottom = -75.0
tower = NodePath("..")

[node name="EquipMenu" parent="." node_paths=PackedStringArray("tower") instance=ExtResource("9_g1x86")]
visible = false
offset_left = -146.0
offset_top = 72.0
offset_right = 147.0
offset_bottom = 139.0
tower = NodePath("..")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
